# TetrisGAI

./: .gitignore  Cargo.toml  README.md
benches/: bench.rs  game.rs  pieces.rs  strip.rs
src/: ai.rs  game.rs  lib.rs  main.rs  tetris.rs  train.rs
src/game/: pieces.rs  strip.rs
src/train/: breed.rs  display.rs  progress.rs
